--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "svg": "^0.1.0",
     "swagger-editor": "^3.8.3",
     "swagger-ui-express": "^4.1.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-google-charts": "^0.3.3"
   }
 }
