--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@vue/cli": "^4.3.1",
+    "apexcharts": "^3.19.2",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "countries-list": "^2.5.4",
     "express": "^4.17.1",
+    "jquery-ui-dist": "^1.12.1",
     "mongoclient": "^1.0.3",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.13",
@@ -23,6 +25,7 @@
     "swagger-editor": "^3.8.3",
     "swagger-ui-express": "^4.1.4",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.5.3",
     "vue-google-charts": "^0.3.3"
   }
 }
