--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "countries-list": "^2.5.4",
     "express": "^4.17.1",
     "jquery-ui-dist": "^1.12.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoclient": "^1.0.3",
     "mongodb": "^3.5.7",
     "mongoose": "^5.9.13",
